2006-09-04 10:13:22  Sean Middleditch <elanthis@awesomeplay.com>

  * The function is called exit(), not portal(); yay for
    search-and-replace.

2006-09-04 09:46:09  Sean Middleditch <elanthis@awesomeplay.com>

  * Fixed telnet timeout not working.
  * Added a Nil type to Scriptix to avoid crashes on errors
    regarding nil values.
  * Added HTTP timeouts.
  * Added request size checking to HTTP requests.
  * Greatly improved HTTP error reporting and logging.
  * Note: HTTP still susceptible to "header bombing."

2006-09-04 07:13:47  Sean Middleditch <elanthis@awesomeplay.com>

  * Add proper HTTP session tracking and session IDs.
  * WARNING: I have no clue how secure the session IDs are.
    Not my area of expertise.

2006-09-04 04:49:23  Sean Middleditch <elanthis@awesomeplay.com>

  * AweMUD now includes a basic web server, complete with
    Scriptix integration.  Sort of.  Still needs a lot of work.
    DO NOT enable on sites with public access, the code is not
    yet deemed secure.

2006-09-04 01:42:19  Sean Middleditch <elanthis@awesomeplay.com>

  * Fix mail compilation for systems with sendmail support.

2006-09-04 01:23:46  Sean Middleditch <elanthis@awesomeplay.com>

  * Changed object actions from a file object to an attribute.
  * Renamed attribute type of creatures from char to creature.
  * Cleaned up the parser code, added (somewhat) useful error
    messages on failure.
  * Fixed the parse codes used in example.zone for day/night tests.

2006-09-04 00:04:41  Sean Middleditch <elanthis@awesomeplay.com>

  * Renamed RoomExit and related types to Portal.
  * Fixed some Character/Creature conversion mistakes.

2006-09-03 23:45:53  Sean Middleditch <elanthis@awesomeplay.com>

  * Remove differentiation between attributes and keyed attributes
    in file object format; all attributes are now keyed.
  * Clean up file obj API calls.

2006-09-03 23:22:05  Sean Middleditch <elanthis@awesomeplay.com>

  * Renamed Character to Creature.
