@@ -1,3 +1,13 @@
+2006-09-04 20:39:32  Sean Middleditch <elanthis@awesomeplay.com>
+
+  * Made _ a valid character for a parse name.
+  * Improved HTTP error system.
+  * HTTP handler no longer stores all headers, but only the values
+    of the ones it cares about, to avoid header bomb attacks.
+  * Fixed bug in ScriptFunction::run(ScriptValue,ScriptValue)
+    where it wasn't storing the second argument correctly.
+  * Cleaned up HTTP handler.
+
 2006-09-04 10:13:22  Sean Middleditch <elanthis@awesomeplay.com>
 
   * The function is called exit(), not portal(); yay for
